<resources>
    <string name="app_name">android-edu</string>
    <string name="input">Введіть пароль</string>
    <string name="visible_pass">Показувати</string>
    <string name="invisible_pass">Не показувати</string>
    <string name="pass">Пароль</string>
    <string name="copy_pass">Скопійований пароль</string>
    <string name="saved">Збережені дані</string>
    <string name="saved_message">Ваші збережені паролі</string>
    <string name="welcome">Вітаємо!</string>
    <string name="ok">OK</string>
    <string name="delete">Видалити</string>
</resources>