<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <LinearLayout
        android:layout_width="303dp"
        android:layout_height="282dp"
        android:alpha="0.85"
        android:background="@drawable/form"
        android:orientation="vertical"
        android:paddingHorizontal="10sp"
        android:paddingVertical="15sp"
        android:visibility="visible">

        <TextView
            android:id="@+id/input_label"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="15sp"
            android:height="50sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/input"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="5sp"
            android:height="50sp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/andika"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10sp"
            tools:ignore="LabelFor" />

        <RadioGroup
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/show"
                android:layout_width="115sp"
                android:layout_height="48dp"
                android:buttonTint="@color/control"
                android:checked="true"
                android:onClick="onRadioButtonClick"
                android:text="@string/visible_pass"
                android:textColor="@color/white"
                android:textColorHighlight="@color/control"
                android:textColorLink="@color/black" />

            <RadioButton
                android:id="@+id/no_show"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:buttonTint="@color/control"
                android:onClick="onRadioButtonClick"
                android:text="@string/invisible_pass"
                android:textColor="@color/white"
                android:textColorLink="@color/control" />
        </RadioGroup>

        <Button
            android:id="@+id/output_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:height="48sp"
            android:backgroundTint="@color/control"
            android:onClick="onPasswordButtonClick"
            android:text="@string/ok" />

        <Button
            android:id="@+id/open_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/control"
            android:fontFamily="sans-serif-medium"
            android:onClick="onOpenSavedDataButtonClick"
            android:text="@string/saved"
            app:layout_constraintBottom_toTopOf="@+id/frame_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</FrameLayout>